fixed modal not covering whole scroll

--- a/src/assets/components/Modal/Modal.css
+++ b/src/assets/components/Modal/Modal.css
@@ -4,7 +4,9 @@
     display: flex;
     align-items: center;
     justify-content: center;
-
+    width: 100%;
+    height: 100%;
     background-color: rgba(0, 0, 0, 0.218);
     backdrop-filter: blur(2px);
+    position: fixed;
 }
